@@ -1,3 +1,7 @@
+2011-03-13 Borut Razem <borut.razem AT siol.net>
+
+	* packages/build.boost/Makefile: fixed boost installation on Solaris
+
 2011-03-03 Borut Razem <borut.razem AT siol.net>
 
 	* .sdcc_builder/profile: fixed dos utils aliases on Solaris
